--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,4 +45,16 @@ body{
     width: 200px;
     border-radius: 8px;
     margin-top: 30px;
+    margin-bottom: 10px;
+}
+/* ----footer---- */
+.pie{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    background-color: black;
+    color: white;
+    font-size: 1.5rem;
+    padding-top: 10px;
 }
